--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.11.5"
