--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/sususaiasusubendera/mobility-broker#readme",
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.6.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
