--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "proto3-json-serializer": "^2.0.2"
   }
 }
