--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "watch": "node --watch src/server.js"
+    "watch": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -33,5 +33,8 @@
     "path": "^0.12.7",
     "pg": "^8.11.5",
     "proto3-json-serializer": "^2.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
