--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.11.5",
-    "proto3-json-serializer": "^2.0.2"
+    "proto3-json-serializer": "^2.0.2",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
