--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.11.5",
